<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:padding="5dp"
        android:text="@string/change"
        android:textColor="@color/colorPrimary" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/name"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/title"
        android:hint="@string/name"
        android:padding="15dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/age"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:hint="@string/age"
        android:padding="15dp"
        android:textColor="@color/colorPrimary"
        android:textColorHint="@color/colorPrimary" />

    <Button
        android:id="@+id/sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/age"
        android:layout_centerHorizontal="true"
        android:text="@string/sure"
        android:textColor="@color/colorPrimary" />
</RelativeLayout>